<resources>
    <string name="app_name">azkar</string>
    <string name="title_activity_werd_mohasba">WerdMohasbaActivity</string>

    <string name="saturday">السبت</string>
    <string name="sunday">الأحد</string>
    <string name="monday">الإثنين</string>
    <string name="tuesday">الثلاثاء</string>
    <string name="wednesday">الأربعاء</string>
    <string name="thursday">الخميس</string>
    <string name="friday">الجمعة</string>
    <string name="tasks">المهام</string>
    <string name="besmallah">﴿ بِسْمِ اللّهِ الرَّحْمَنِ الرَّحِيمِ ﴾</string>

    <string-array name="Days">
        <item>@string/saturday</item>
        <item>@string/sunday</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
    </string-array>

    <string-array name="Tasks">
        <item>سنة الفجر</item>
        <item>صلاة الفجر</item>
        <item>أذكار الصلاة</item>
        <item>أذكار الصباح</item>
        <item>قراءة جزء من القراّن</item>
        <item>صلاة الضحي</item>
        <item>سنة الظهر القبلية</item>
        <item>صلاة الظهر</item>
        <item>سنة الظهر البعدية</item>
        <item>أذكار الصلاة</item>
        <item>صلاة العصر</item>
        <item>أذكار الصلاة</item>
        <item>أذكار المساء</item>
        <item>صلاة المغرب</item>
        <item>سنة المغرب</item>
        <item>أذكار الصلاة</item>
        <item>صلاة العشاء</item>
        <item>سنة العشاء</item>
        <item>اذكار الصلاة</item>
        <item>ركعتين قيام الليل</item>
        <item>صلاة الشفع</item>
        <item>صلاة الوتر</item>
        <item>أذكار قبل النوم</item>
        <item>صيام الإثنين و الخميس</item>
    </string-array>

    <string-array name="AzkarCategories">
        <item>اذكار الصباح</item>
        <item>اذكار المساء</item>
        <item>اذكار قبل النوم</item>
        <item>اذكار بعد الصلاة</item>
        <item>اذكار الأذان</item>
        <item>من فضائل يوم الجمعة</item>
        <item>الذكر عند دخول المنزل</item>
        <item>الذكر عند الخروج من المنزل</item>
        <item>الذكر قبل الوضوء</item>
        <item>الذكر بعد الوضوع</item>
        <item>دعاء دخول المسجد</item>
        <item>دعاء الخروج من المسجد</item>
        <item>الدعاء بعد التشهد قبل السلام</item>
        <item>ما يفعل من رأي الرؤيا أو الحلم</item>
        <item>ما يفعل او يقال من أحس وجعا في جسده</item>
        <item>دعاء الإستخارة</item>
        <item>من خشي ان يصيب شئ بعينه</item>
        <item>دعاء الفزع من النوم</item>
        <item>قبل الطعام</item>
        <item>دعاء سجود التلاوة</item>
    </string-array>

    <string-array name="SebhaAzkar">
        <item>اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد</item>
        <item>لا إله إلا الله وحده لا شريك له , له الملك وله الحمد وهو على كل شيء قدير</item>
        <item>لا اله الا انت استغفرك واتوب اليك</item>
        <item>أستغفر الله</item>
        <item>سبحان الله</item>
        <item>الحمد لله</item>
        <item>لا إله إلا الله</item>
        <item>الله أكبر</item>
        <item>لا إله الا انت استغفرك واتوب اليك</item>
        <item>استغفر الله واتوب اليه</item>
        <item>سبحان الله وبحمده سبحان الله العظيم</item>
    </string-array>

    <string-array name="AzkaryAzkar">
        <item>أَشْهَدُ أَنّ لَّا إِلَٰهَ إِلَّإ الله وأَشْهَدُ ان محمداً رسول الله</item>
        <item>اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد</item>
        <item>سبحان الله</item>
        <item>الحمد لله</item>
        <item>اللهم اجعل حبك أحب إلي من الماء البارد على الظمأ</item>
        <item>لا إله إلا الله</item>
        <item>اللهم أسألك من الخير كله</item>
        <item>لا اله الا انت استغفرك واتوب اليك</item>
        <item>الله أكبر </item>
        <item>لا حول ولا قوة إلا بالله</item>
        <item>أستغفر الله</item>
        <item>اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد</item>
        <item>اللهم استرنا فوق الارض</item>
        <item>اللهم إني أعوذ بك من الهم والحزن</item>
        <item>اللهم ارحمنا</item>
        <item>اللهم اغفر لنا</item>
        <item>اللهم إني أسألك من فضلك ورحمتك</item>
        <item>اللهم وسع ارزاقنا</item>
        <item>لا اله الا انت استغفرك واتوب اليك</item>
        <item>يا كريم</item>
        <item>اللهم اسالك حسن الخاتمه</item>
        <item>اللهم اسالك ترك المنكرات</item>
        <item>اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد</item>
        <item>اللهم اني اعوذ بك من الشر كله</item>
        <item>اللَّهُمَّ إِنَّكَ عَفُوٌّ تُحِبُّ العَفْوَ فَاعْفُ عَنِّي</item>
        <item>لا اله الا انت سبحانك اني كنت من الظالمين</item>
        <item>اللهم عفوك ورضاك والجنه</item>
        <item>اللهم لك الحمد</item>
        <item>اشهد ان لا اله الا انت استغفرك واتوب اليك</item>
        <item>أستغفر الله…أستغفر الله</item>
        <item>أعوذ بكلمات الله التامات من شر ما خلق</item>
        <item>ربي أعوذ بك من همزات الشياطين</item>
        <item>اللهم أعني على ذكرك وشكرك وحسن عبادتك</item>
        <item>اللهم إني أسألك العفو والعافية</item>
        <item>اللهم إني أعوذ بك من زوال نعمتك</item>
        <item>اللهم اجعل عملنا كله خالصا</item>
    </string-array>

    <string name="shareString">برنامج أذكار المسلم يحتوي على :
أذكار الصباح والمساء وأذكار قبل النوم وغيرها من الأذكار
المسبحة الإلكترونية
ورد المحاسبة
أذكار تذكرك بالله طوال اليوم بظهور على الشاشة تلقائيا</string>
</resources>
