<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:textDirection="ltr">

    <HorizontalScrollView
        android:scrollbars="none"
        android:id="@+id/headerScroll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTaskName"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center"
                android:text="@string/tasks"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSaturday"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center"
                android:text="@string/saturday"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSunday"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center"
                android:text="@string/sunday"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMonday"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center"
                android:text="@string/monday"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTuesday"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtWednesday"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtThursday"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center"
                android:text="@string/thursday"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFriday"
                android:layout_width="@dimen/cell_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center"
                android:text="@string/friday"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </HorizontalScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>